--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ vk-api = "^11.9.9"
 beautifulsoup4 = "^4.12.2"
 python-decouple = "^3.8"
 pylint = "^2.17.7"
+pytest = "^7.4.2"
+coverage = "^7.3.2"
 
 
 [build-system]
